--- a/VB/EasyFunctions/EasyFunctions.vbproj
+++ b/VB/EasyFunctions/EasyFunctions.vbproj
@@ -52,7 +52,9 @@
     <NoWarn>42016,41999,42017,42018,42019,42032,42036,42020,42021,42022</NoWarn>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="LabJack.LJM, Version=1.7.6.0, Culture=neutral, PublicKeyToken=9d6c109908595016, processorArchitecture=MSIL" />
+    <Reference Include="LabJack.LJM, Version=1.7.6.0, Culture=neutral, PublicKeyToken=9d6c109908595016, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Deployment" />
