--- a/VB/Basic/EasyFunctions/EasyFunctions.vbproj
+++ b/VB/Basic/EasyFunctions/EasyFunctions.vbproj
@@ -69,6 +69,9 @@
     <Import Include="System.Diagnostics" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\LJMUtilities.vb">
+      <Link>LJMUtilities.vb</Link>
+    </Compile>
     <Compile Include="EasyFunctions.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
