--- a/VB/More/Stream/TriggeredStreamStart/TriggeredStreamStart.vbproj
+++ b/VB/More/Stream/TriggeredStreamStart/TriggeredStreamStart.vbproj
@@ -81,6 +81,9 @@
     <Import Include="System.Xml.Linq" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\..\LJMUtilities.vb">
+      <Link>LJMUtilities.vb</Link>
+    </Compile>
     <Compile Include="TriggeredStreamStart.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
